# motor_ws

./: .gitignore  BUG_ANALYSIS.md  DUAL_GANTRY_GUIDE.md  MOTOR_WS_GUIDE.md  README.md  RPLIDAR_ROS2_PLAN.md  TEST_X_AXIS.md  TEST_Z_AXIS.md  VELOCITY_GUIDE.md
.claude/: settings.local.json
.obsidian/: workspace.json
.source/: MOTOR_WS_GUIDE.md  TEST_X_AXIS.md
src/motor_control/: package.xml  setup.py
src/motor_control/config/: motor_params.yaml
src/motor_control/launch/: homing_only.launch.py  motor_control.launch.py
src/motor_control/motor_control/: ethercat_interface.py  homing_action_server.py  motor_driver_node.py  move_action_server.py
src/motor_control_interfaces/: CMakeLists.txt  package.xml
src/motor_control_interfaces/action/: Homing.action  MoveAxis.action
src/motor_control_interfaces/msg/: AxisState.msg
src/motor_control_interfaces/srv/: GetDriveStatus.srv  SetVelocity.srv
